--- a/src/app/layout/healing-services/services-details/childhood-trauma.component.html
+++ b/src/app/layout/healing-services/services-details/childhood-trauma.component.html
@@ -1,221 +1,224 @@
-<div *ngIf="loading" class="loader-maim"> 
-<div class="hm-spinner"></div>
-</div>    
+<div *ngIf="loading" class="loader-maim">
+    <div class="hm-spinner"></div>
+</div>
 <main class="mt " *ngIf="!loading">
-                    <section id="top0" class="kanny-content">
-                        <div class="container">
-                            <div class="contentallkanny">
-                                <img class="form-bac" *ngIf="service.bannerHeading" [src]="service.bannerHeading">
-                                <h3>{{ service.acf?.as_parent_heading }}</h3> 
-                                <div [innerHTML]="service.acf?.intro_discription"></div> 
-                              
-                                <a class="button" routerLink="/book-session">{{ service.acf?.intro_button }}</a>
+    <section id="top0" class="kanny-content">
+        <div class="container">
+            <div class="contentallkanny">
+                <img class="form-bac" *ngIf="service.bannerHeading" [src]="service.bannerHeading">
+                <h3>{{ service.acf?.as_parent_heading }}</h3>
+                <div [innerHTML]="service.acf?.intro_discription"></div>
+
+                <a class="button" routerLink="/book-session">{{ service.acf?.intro_button }}</a>
 
 
-                            </div>
-                        </div>
-                    </section>
+            </div>
+        </div>
+    </section>
 
 
-                    <section class="who-we-are">
-                        <div class="container ">
-                            <div class="flex-who-we-are">
-                                <div class="left-images">
-                                    <div class="main-img">
-                                        <img *ngIf="cardImage1" [src]="cardImage1" alt="Woman on computer">
-                                    </div>
-                                </div>
+    <section class="who-we-are">
+        <div class="container ">
+            <div class="flex-who-we-are">
+                <div class="left-images">
+                    <div class="main-img">
+                        <img *ngIf="cardImage1" [src]="cardImage1" alt="Woman on computer">
+                    </div>
+                </div>
 
-                                <div class="right-content" data-aos="fade-up" data-aos-duration="1500">
-                                    <h3>{{ service.acf?.healing__service_card_one_heading}}</h3>
-                                    <div class="b" [innerHTML]="service.acf?.real_people_content"></div>
-
-
-                                </div>
-                            </div>
-
-                        </div>
-
-                    </section>
+                <div class="right-content" data-aos="fade-up" data-aos-duration="1500">
+                    <h3>{{ service.acf?.healing__service_card_one_heading}}</h3>
+                    <div class="b" [innerHTML]="service.acf?.real_people_content"></div>
 
 
-                    <div class="might-feel" >
-                        <div class="container">
-                            <div class="headinginfo">
-                                <h3>{{ service.acf?.healing_comparison_main_heading }}</h3>
-                                <p>{{ service.acf?.healing_comparison_conetnt }}</p>
-                            </div>
-                            <div class="might-feel-row  mb-4">
-                                <div class="might-feel-col1">
-                                    <h4>{{ service.acf?.healing_comparison_left_heading }}</h4>
-                                      
-      <div  [innerHTML]="service.acf?.healing_comparison_left_list_content"></div>
-   
+                </div>
+            </div>
 
-                                </div>
-                                <div class="might-feel-col2">
-                                    <h4>{{ service.acf?.healing_comparison_right_heading }}</h4>
-                                     <div  [innerHTML]="service.acf?.healing_comparison_right_content"></div>
-                                </div>
+        </div>
 
-                            </div>
-                        </div>
+    </section>
 
 
- <div class="container" *ngIf="service.acf?.banner_desc?.trim()">
-                            <div class="headinginfo">
-                                <h3>{{ service.acf?.healing_comparison_main_heading2 }}</h3> 
-                            </div>
-                            <div class="might-feel-row  mb-4">
-                                <div class="might-feel-col1">
-                                    <h4>{{ service.acf?.healing_comparison_left_heading2 }}</h4>
-                                      
-      <div  [innerHTML]="service.acf?.healing_comparison_left_list_content2"></div>
-   
+    <div class="might-feel">
+        <div class="container">
+            <div class="headinginfo">
+                <h3>{{ service.acf?.healing_comparison_main_heading }}</h3>
+                <p>{{ service.acf?.healing_comparison_conetnt }}</p>
+            </div>
+            <div class="might-feel-row  mb-4">
+                <div class="might-feel-col1">
+                    <h4>{{ service.acf?.healing_comparison_left_heading }}</h4>
 
-                                </div>
-                                <div class="might-feel-col2">
-                                    <h4>{{ service.acf?.healing_comparison_right_heading2 }}</h4>
-                                     <div  [innerHTML]="service.acf?.healing_comparison_right_content2"></div>
-                                </div>
+                    <div [innerHTML]="service.acf?.healing_comparison_left_list_content"></div>
 
-                            </div>
-                        </div>
+
+                </div>
+                <div class="might-feel-col2">
+                    <h4>{{ service.acf?.healing_comparison_right_heading }}</h4>
+                    <div [innerHTML]="service.acf?.healing_comparison_right_content"></div>
+                </div>
+
+            </div>
+        </div>
+
+
+        <div class="container"  *ngIf="service.acf?.healing_comparison_main_heading2 || service.acf?.healing_comparison_left_heading2 || service.acf?.healing_comparison_left_list_content2 || service.acf?.healing_comparison_right_heading2 || service.acf?.healing_comparison_right_content2 ">
+            <div class="headinginfo">
+                <h3>{{ service.acf?.healing_comparison_main_heading2 }}</h3>
+            </div>
+            <div class="might-feel-row  mb-4">
+                <div class="might-feel-col1">
+                    <h4>{{ service.acf?.healing_comparison_left_heading2 }}</h4>
+
+                    <div [innerHTML]="service.acf?.healing_comparison_left_list_content2"></div>
+
+
+                </div>
+                <div class="might-feel-col2">
+                    <h4>{{ service.acf?.healing_comparison_right_heading2 }}</h4>
+                    <div [innerHTML]="service.acf?.healing_comparison_right_content2"></div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <section class="about-banner">
+        <div class="container">
+            <div class="flex-about">
+                <div class="left-about" data-aos="fade-up" data-aos-duration="1500">
+                    <h5 class="tag-line">Brain Adapted</h5>
+                    <h3>{{ service.acf?.healing_service_card_tow_heading }}</h3>
+                    <div [innerHTML]="service.acf?.healing_service_card_tow_content"></div>
+
+                </div>
+                <div class="right-about">
+                    <div class="about-right-img">
+                        <img *ngIf="cardImage2" [src]="cardImage2" class="imagedesign" />
+
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    <section class="who-we-are">
+        <div class="container ">
+            <div class="flex-who-we-are">
+                <div class="left-images">
+                    <div class="main-img">
+                        <img *ngIf="cardImage3" [src]="cardImage3" alt="Woman on computer">
+                    </div>
+                </div>
+
+                <div class="right-content aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500">
+                    <h3>{{ service.acf?.healing_service_card_three_heading }}</h3>
+                    <div [innerHTML]="service.acf?.healing_service_card_three_content"></div>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+    <div class="healing-table">
+        <div class="container">
+            <div class="headinginfo">
+                <h3>{{ service.acf?.choose_the_path_table_heading }}</h3>
+            </div>
+
+            <table border="1" cellpadding="10" cellspacing="0" style="border-collapse: collapse; width: 100%;">
+                <thead>
+                    <tr>
+                        <th>
+                            <p class="b">Step You Can Take</p>
+                        </th>
+                        <th>
+                            <p class="b">What You’ll Gain</p>
+                        </th>
+                        <th>
+                            <p class="b">Action</p>
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            <p class="b">📘 Read the Book</p>
+                        </td>
+                        <td>Learn how emotional cycles form and how to break them</td>
+                        <td><a class="button" href="#">Get the Book</a></td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p class="b">🎓 Take a Course</p>
+                        </td>
+                        <td>Step-by-step emotional healing from the comfort of your home</td>
+                        <td><a class="button" href="#">Explore Courses</a></td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p class="b">🤝 Book a Free Call</p>
+                        </td>
+                        <td>Talk with Kenny directly to understand what’s right for you</td>
+                        <td><a class="button" href="#">Talk to Kenny</a></td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <p>{{ service.acf?.choose_the_path_content }}</p>
+
+
+
+        </div>
+    </div>
+
+
+    <section class="postcard">
+        <div class="container">
+            <div class="postcard-row">
+                <div class="postcard-item1">
+                    <img *ngIf="postcardImage1" [src]="postcardImage1" />
+                </div>
+                <div class="postcard-item2 wording">
+                    <h3>{{ service.acf?.post_card_one_heading }}</h3>
+                    <div [innerHTML]="service.acf?.post_card_one_content"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="about-banner"
+    *ngIf="postcardImage2 || postcardicfImage || service.acf?.post_card_tow_heading || service.acf?.post_card_tow_content_list"
+    >
+        <div class="container">
+            <div class="flex-about">
+                <div class="left-about aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500">
+                    <h5 class="tag-line">About Freedom</h5>
+                    <h3>{{ service.acf?.post_card_tow_heading }}</h3>
+
+                    <div class="video-box-row blockvider">
+                        <div [innerHTML]="service.acf?.post_card_tow_content_list"></div>
+
+                        <a class="button" [href]="service.acf?.post_card_tow_button_link?.url">{{
+                            service.acf?.post_card_tow_button_text }}</a>
                     </div>
 
-              <section class="about-banner">
-                        <div class="container">
-                            <div class="flex-about">
-                                <div class="left-about" data-aos="fade-up" data-aos-duration="1500">
-                                    <h5 class="tag-line">Brain Adapted</h5>
-                                    <h3>{{ service.acf?.healing_service_card_tow_heading }}</h3>
-                                    <div  [innerHTML]="service.acf?.healing_service_card_tow_content"></div>
+                </div>
+                <div class="right-about">
+                    <div class="about-right-img">
+                        <img class="imagedesign" *ngIf="postcardImage2" [src]="postcardImage2" alt="">
 
-                                </div>
-                                <div class="right-about">
-                                    <div class="about-right-img">
-                                        <img *ngIf="cardImage2" [src]="cardImage2" class="imagedesign" />
-
-
-                                    </div>
-                                </div>
-                            </div>
-                            </div>
-                    </section>
-
-
-                    
-                    <section class="who-we-are">
-                        <div class="container ">
-                            <div class="flex-who-we-are">
-                                <div class="left-images">
-                                    <div class="main-img">
-                                        <img *ngIf="cardImage3" [src]="cardImage3" alt="Woman on computer">
-                                    </div>
-                                </div>
-
-                                <div class="right-content aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500">
-                                    <h3>{{ service.acf?.healing_service_card_three_heading }}</h3>
-                                     <div  [innerHTML]="service.acf?.healing_service_card_three_content"></div>
-                                </div>
-                            </div>
-
-                        </div>
-
-                    </section>
-
-                    <div class="healing-table">
-                        <div class="container">
-                            <div class="headinginfo">
-                                <h3>{{ service.acf?.choose_the_path_table_heading }}</h3>
-                            </div>
-
-                            <table border="1" cellpadding="10" cellspacing="0" style="border-collapse: collapse; width: 100%;">
-                                <thead>
-                                    <tr>
-                                        <th>
-                                            <p class="b">Step You Can Take</p>
-                                        </th>
-                                        <th>
-                                            <p class="b">What You’ll Gain</p>
-                                        </th>
-                                        <th>
-                                            <p class="b">Action</p>
-                                        </th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>
-                                            <p class="b">📘 Read the Book</p>
-                                        </td>
-                                        <td>Learn how emotional cycles form and how to break them</td>
-                                        <td><a class="button" href="#">Get the Book</a></td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <p class="b">🎓 Take a Course</p>
-                                        </td>
-                                        <td>Step-by-step emotional healing from the comfort of your home</td>
-                                        <td><a class="button" href="#">Explore Courses</a></td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <p class="b">🤝 Book a Free Call</p>
-                                        </td>
-                                        <td>Talk with Kenny directly to understand what’s right for you</td>
-                                        <td><a class="button" href="#">Talk to Kenny</a></td>
-                                    </tr>
-                                </tbody>
-                            </table>
-
-                            <p>{{ service.acf?.choose_the_path_content }}</p>
-
-
-
+                        <div class="rightdesigncontent">
+                            <img *ngIf="postcardicfImage" [src]="postcardicfImage" alt="">
+                            <h5>Certified Life Coach</h5>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-
-                    <section class="postcard">
-                        <div class="container">
-                            <div class="postcard-row">
-                                <div class="postcard-item1">
-                                    <img *ngIf="postcardImage1" [src]="postcardImage1" />
-                                </div>
-                                <div class="postcard-item2 wording">
-                                    <h3>{{ service.acf?.post_card_one_heading }}</h3>
-<div  [innerHTML]="service.acf?.post_card_one_content"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </section>
-                    <section class="about-banner"  >
-                        <div class="container">
-                            <div class="flex-about">
-                                <div class="left-about aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500">
-                                    <h5 class="tag-line">About Freedom</h5>
-                                    <h3>{{ service.acf?.post_card_tow_heading }}</h3>
-
-                                    <div class="video-box-row blockvider">
-                                     <div  [innerHTML]="service.acf?.post_card_tow_content_list"></div>
-
-                                     <a class="button" [href]="service.acf?.post_card_tow_button_link?.url">{{ service.acf?.post_card_tow_button_text }}</a>
-                                    </div>
-
-                                </div>
-                                <div class="right-about">
-                                    <div class="about-right-img">
-                                        <img class="imagedesign" *ngIf="postcardImage2" [src]="postcardImage2" alt="">
-
-                                        <div class="rightdesigncontent">
-                                            <img *ngIf="postcardicfImage" [src]="postcardicfImage" alt="">
-                                            <h5>Certified Life Coach</h5>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </section>
- 
-                </main>
+</main>
