--- a/src/app/layout/blog/blog.component.html
+++ b/src/app/layout/blog/blog.component.html
@@ -53,7 +53,7 @@
                                             <div class="buttonsser">
                                                 <a routerLink="/courses" routerLinkActive="active"> See All Courses</a>
                                                 <a routerLink="/book-session" routerLinkActive="active"> Book a Session
-                                                    with kenny Weiss</a>
+                                                    with Kenny Weiss</a>
                                             </div>
                                         </ul>
                                     </div>
