--- a/src/app/layout/books/books.component.html
+++ b/src/app/layout/books/books.component.html
@@ -481,7 +481,7 @@
                     <div class="booklistcontent">
                         <a href="https://www.amazon.com/Your-Journey-Success-Answers-Discover/dp/1981471014/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1580748958&sr=8-1"
                             target="_blank">
-                            <h5>Your Journey to Being Yourself Book</h5>
+                            <h5>Your Journey to Being Yourself </h5>
 
                         </a>
                         <h6>by Kenny Weiss</h6>
