--- a/src/app/layout/feelings-wheel/feelings-wheel.component.html
+++ b/src/app/layout/feelings-wheel/feelings-wheel.component.html
@@ -91,7 +91,7 @@
                             disconnected from your authentic self. Download
                             it below to get started.</p>
                         <div class="button-row canter">  
-                                <a routerLink="/book-session" class="button while">Available Now at Barnes & Noble</a>
+                                <a routerLink="/book-session" class="button while"> Book a call with Kenny</a>
                         </div>
                     </div>
 
