--- a/src/app/layout/healing-services/healing-services.component.html
+++ b/src/app/layout/healing-services/healing-services.component.html
@@ -42,7 +42,7 @@
                                 See All Courses</a>
                             <a routerLink="/book-session"
                                 routerLinkActive="active"> Book a Session with
-                                kenny Weiss</a>
+                                Kenny Weiss</a>
                         </div>
                     </ul>
                 </div>
