--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -9,7 +9,7 @@
                         misery.</p>
                     <div class="button-row">
                         <a class="button whitebt" routerLink="/courses">Explore courses</a>
-                        <a class="button whitebt" routerLink="/book-session">Book a meeting with kenny</a>
+                        <a class="button whitebt" routerLink="/book-session">Book a meeting with Kenny</a>
                     </div>
 
                     <p class="people">Trusted by 4,000+ people</p>
