--- a/src/app/layout/meet-kenny/meet-kenny.component.html
+++ b/src/app/layout/meet-kenny/meet-kenny.component.html
@@ -376,8 +376,7 @@
 
                     <p>They were familiar with Kenny’s work on narcissism and had been following his content on the
                         subject, and as they were building out their own blog on the subject, they asked Kenny to
-                        comment as a subject matter expert. The image of a quote on the Sandstone Care website is
-                        featured below.</p>
+                        comment as a subject matter expert.</p>
                     <br>
                     <p>You see, Kenny is a person who has struggled with multiple addictions and has been married to
                         narcissists. Not only has he studied the subject, but he has also lived it. In addition, he
@@ -450,8 +449,7 @@
 
                         <p>They were familiar with Kenny’s work on narcissism and had been following his content on the
                             subject, and as they were building out their own blog on the subject, they asked Kenny to
-                            comment as a subject matter expert. The image of a quote on the Sandstone Care website is
-                            featured below.</p>
+                            comment as a subject matter expert.</p>
                         <br>
                         <p>You see, Kenny is a person who has struggled with multiple addictions and has been married to
                             narcissists. Not only has he studied the subject, but he has also lived it. In addition, he
@@ -748,7 +746,7 @@
                 </div>
                 <div class="right-area">
                     <h5 class="tag-line">What we have</h5>
-                    <h3>What You Will Achieve With kenny?</h3>
+                    <h3>What You Will Achieve With Kenny?</h3>
                     <p>Imagine waking up with a sense of clarity and inner strength, knowing that every past
                         struggle has paved the way for your growth. With this course, you will:</p>
 
