--- a/src/app/layout/worst-day-cycle/wdc-details/wdc-details.component.html
+++ b/src/app/layout/worst-day-cycle/wdc-details/wdc-details.component.html
@@ -35,7 +35,7 @@
                                     <p><strong>Contact today!</strong></p>
                                     <div class="button-row">
                                         <a routerLink="/book-session" class="button">
-                                            book a call with kenny <span class="arrow"><i
+                                            book a call with Kenny <span class="arrow"><i
                                                     class="fa-solid fa-arrow-right"></i></span>
                                         </a>
 
