--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -118,7 +118,12 @@ header.header.blacktext ul.navmenu i {
 header.header.blacktext.homenav ul.navmenu li ul.doropmenu li a {
     color: #000000;
 }
-
+.boxlist-content h5 {
+    font-size: 18px;
+}
+.boxlist-content p {
+    font-size: 14px;
+}
 .error {
     color: #ff0000;
 }
@@ -2360,11 +2365,17 @@ h5.info-title {
 
 .journey-point {
     display: grid;
-    grid-template-columns: 35% 1fr;
+    grid-template-columns:1fr 35%;
     width: 100%;
     gap: 28px;
+    position: relative;
+    align-items: start;
 }
-
+.journey-point .left-box 
+ {
+    position: sticky;
+    top: 90px;
+}
 .left-box {
     flex: 1 1 50%;
 }
@@ -5641,9 +5652,9 @@ section.sourses-section .right-content h3 {
     position: relative;
 }
 
-.description {
+/* .description {
     margin-bottom: 24px;
-}
+} */
 
 .feature {
     display: flex;
@@ -7073,7 +7084,22 @@ a.button.border-only {
     .positionsticky {
         position: static;
     }
-
+.journey-point .left-box {
+    position: relative;
+    top: 0;
+}
+.video-boxes img { 
+    width: 100%;
+    height: 100%; 
+}
+.coressdetailes .video-boxes.mt22 {
+    width: 155px;
+    height: 128px;
+    bottom: -80px;
+}
+.right-box { 
+    order: 2;
+}
 
 }
 
