--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2416,7 +2416,11 @@ h5.info-title {
     padding-left: 0;
 }
 
-
+.benefits-list { 
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0px 25px;
+}
 
 .benefits-list {
     counter-reset: myCounter;
@@ -7691,7 +7695,9 @@ a.button.border-only {
     h5.wp-block-heading {
         font-size: 1.5em;
     }
-
+.benefits-list { 
+    grid-template-columns: 1fr; 
+}
 
 }
 
