--- a/src/app/layout/book-session/book-session.component.html
+++ b/src/app/layout/book-session/book-session.component.html
@@ -53,7 +53,11 @@
 
     <section id="clendly" class="clendly">
         <h3>Book a Session Now</h3>
-        <img src="images/clendly.jpeg" loading="lazy" alt="">
+       <div class="calendly-inline-widget"
+     data-url="https://calendly.com/kennyweiss/single-session-350?hide_gdpr_banner=1"
+     style="min-width:320px; height:700px;">
+</div>
+        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
     </section>
 
 
