--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -572,6 +572,9 @@ a.contact-nav {
     margin-top: 15px;
     margin-bottom: 15px;
 }
+.blogdetailspage .main-content p {
+    margin-bottom: 10px;
+}
 .blogdetailspage .main-content h4{
 margin-top: 15px;
     margin-bottom: 15px;
