--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -571,12 +571,13 @@ a.contact-nav {
     visibility: visible;
     transform: scale(1);
 }
-.blogdetailspage .main-content h3 {
+.blogdetailspage .main-content h3, .blogdetailspage .main-content h4, .blogdetailspage .main-content h5, .blogdetailspage .main-content h6 {
     margin-top: 15px;
     margin-bottom: 15px;
 }
 .blogdetailspage .main-content p {
     margin-bottom: 10px;
+    margin-top: 10px;
 }
 .blogdetailspage .main-content h4{
 margin-top: 15px;
