--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -577,9 +577,12 @@ a.contact-nav {
     margin-bottom: 15px;
 }
 .blogdetailspage .main-content p {
-    margin-bottom: 10px;
-    margin-top: 10px;
+    margin-bottom: 15px;
+    margin-top: 15px;
 } 
+.blogdetailspage iframe{
+    height: 530px;
+}
 
 .clendly iframe {
     height: 100%;
