--- a/src/app/layout/book-session/book-session.component.html
+++ b/src/app/layout/book-session/book-session.component.html
@@ -268,9 +268,8 @@
     <section class="podcastvideos">
         <div class="container">
             <div class="videotestiomonials">
-                <h3>Tiffany's Transformation</h3>
-                <p>"I spent over $80,000 with all the big-name gurus and nothing changed. Since working with Kenny
-                    and the University, My whole life has shifted"</p>
+                <h3>Voices of Transformation</h3>
+                <p>Hear from clients who turned their struggles into strength with Kenny’s support.</p>
             </div>
 
             <div class="videorow">
