--- a/src/app/layout/books/books.component.html
+++ b/src/app/layout/books/books.component.html
@@ -107,7 +107,7 @@
                     </div>
                     <div class="video-boxes">
                         <img src="images/books.jpg" loading="lazy" alt="Video thumbnail">
-                        <a id="play-video" class="video-play-button"
+                        <a target="_blank" id="play-video" class="video-play-button"
                             href="https://youtu.be/a1udGRR63OA?si=D7Iddfp5ezrC8jTJ" data-toggle="modal"
                             data-target="#savoybeachhotel">
                             <span></span>
